<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app"
        tools:context=".ui.infos.InfosMovieActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cover_movie"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/cover_movie"
            android:scaleType="centerCrop"
            app:layout_constraintCircleRadius="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/shapeableImageStyle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_32"
            app:fabCustomSize="@dimen/margin_24"
            android:background="@color/transparentColor"
            android:backgroundTint="@color/transparentColor"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_movie_detail_movie"
            style="@style/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_8"
            android:maxEms="9"
            android:text="@string/title_movie"
            android:textColor="@color/movieDetailsTextBoldColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


        <TextView
            android:id="@+id/year_movie"
            style="@style/Text_Detail_Movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/year_time"
            android:textColor="@color/movieDetailsColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_movie_detail_movie" />

        <TextView
            android:id="@+id/txtPage"
            style="@style/Text_Detail_Movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_page"
            android:textColor="@color/movieDetailsColor"
            app:layout_constraintStart_toEndOf="@+id/year_movie"
            app:layout_constraintTop_toTopOf="@+id/year_movie" />

        <TextView
            android:id="@+id/txtMovieLength"
            style="@style/Text_Detail_Movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/txt_movie_length"
            android:textColor="@color/movieDetailsColor"
            app:layout_constraintStart_toEndOf="@+id/txtPage"
            app:layout_constraintTop_toBottomOf="@+id/title_movie_detail_movie" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvMovieGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year_movie"
            tools:listitem="@layout/item_genre_details" />

        <TextView
            android:id="@+id/sinopse_detail_movie"
            style="@style/Subtitle_Detail_Movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_24"
            android:text="@string/sinopse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rcvMovieGenres" />

        <TextView
            android:id="@+id/description_sinopse"
            style="@style/Text_Detail_Movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:textColor="@color/movieInfoTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sinopse_detail_movie"
            app:layout_goneMarginEnd="@dimen/margin_24"
            tools:text="@string/sinopse" />

        <TextView
            android:id="@+id/elenco_detail_movie"
            style="@style/Subtitle_Detail_Movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/elenco"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_sinopse" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_24"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/elenco_detail_movie"
            tools:listitem="@layout/item_image_actor" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="145dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="@+id/cover_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cover_movie">

            <com.google.android.material.card.MaterialCardView
                style="@style/LabelRatingCardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="2dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtUsersRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_24"
            android:text="@string/star_avaliacao_usuario"
            android:textColor="@color/movieDetailsColor"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/frameLayout" />

        <TextView
            android:id="@+id/percent_likes_detail_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/_81_percent"
            android:textColor="@color/movieDetailsTextBoldColor"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtUsersRating"
            app:layout_constraintStart_toStartOf="@+id/txtUsersRating" />

        <ImageView
            android:id="@+id/star_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/ic_vectoric_baseline_star_24"
            android:contentDescription="@string/star_avaliacao_usuario"
            app:layout_constraintBottom_toBottomOf="@+id/txtUsersRating"
            app:layout_constraintEnd_toStartOf="@+id/txtUsersRating"
            app:layout_constraintTop_toTopOf="@+id/percent_likes_detail_movies" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>