<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app"
        tools:context=".presentation.ListOfMovies">

        <ImageButton
            android:id="@+id/submitSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:backgroundTint="@color/background_app"
            android:contentDescription="@string/search_button_description"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:backgroundTint="@color/movieInfoTextColor"
            android:ems="15"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/pesquisar_por_filme"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:privateImeOptions="@color/black"
            android:textColor="@color/greenSecondaryColor"
            android:textColorHint="@color/movieInfoTextColor"
            android:textSize="@dimen/text_size_16"
            android:autofillHints="@string/pesquisar_por_filme"
            app:layout_constraintBottom_toBottomOf="@+id/submitSearch"
            app:layout_constraintStart_toEndOf="@+id/submitSearch"
            app:layout_constraintTop_toTopOf="@+id/submitSearch" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLytOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchMovie"
            app:tabIndicator="@drawable/tab_rectangle_3"
            app:tabIndicatorColor="@color/greenPrimaryColor"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/greenSecondaryColor"
            app:tabTextAppearance="@style/CustomTabTextLayout"
            app:tabTextColor="#2A12153D" />

        <ImageView
            android:id="@+id/greenIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:src="@drawable/tab_rectangle_3"
            android:visibility="gone"
            android:contentDescription="@string/page_indicator"
            app:layout_constraintStart_toStartOf="@+id/submitSearch"
            app:layout_constraintTop_toBottomOf="@+id/submitSearch" />

        <TextView
            android:id="@+id/searchModeTxt"
            style="@style/movieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/buscar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/greenIcon"
            app:layout_constraintTop_toBottomOf="@+id/greenIcon" />

        <TextView
            android:id="@+id/backToHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/voltar_ao_inicio"
            android:textColor="@color/greenPrimaryColor"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/searchModeTxt"
            app:layout_constraintTop_toBottomOf="@+id/searchModeTxt" />

        <FrameLayout
            android:id="@+id/searchFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backToHomeBtn" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLytOptions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>